# rnd-pathways

./: .gitignore  README.md  cold_calling_agent.json  pyproject.toml  real_estate.json  reservation_bar.json  restaurant.json  sample-2.json  sample-graph.json
examples/: chat_demo.py
langgraph_demo/: __init__.py  cli.py  config.py  graph_loader.py  json_stategraph.py  workflow.py
tests/: test_workflow.py
